--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ description = test Machine
 author = MK
 license = MIT
 license_file = LICENSE
-platforms = unix, linux, osx, cygwin, win32, win64
+platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
